Video Sequence Time slider ignores handle offset constraints (leading to crash) #74603

Closed
opened 2020-03-10 04:23:26 +01:00 by Campbell Barton · 9 comments

When transforming video sequencer handles, there are limits beyond which you cannot move them which is enforced by the transform code.

The Slip operator ignores these constraints - allowing the strip content to be dragged with offsets that are outside the strip start/end.

To redo:

  • Start a new Video Sequencer Template
  • Add a new scene
  • Add that scene as a sequence strip.
  • Make sure the current frame is in around the middle of the sequence strip.
  • Drag the "Strip Offset Start" to 500 (notice the strip shows as flipped).
  • Delete the strip.
  • Blender Crashes

Attached asan crash output:

asan_error.txt

When transforming video sequencer handles, there are limits beyond which you cannot move them which is enforced by the transform code. The Slip operator ignores these constraints - allowing the strip content to be dragged with offsets that are outside the strip start/end. To redo: - Start a new Video Sequencer Template - Add a new scene - Add that scene as a sequence strip. - Make sure the current frame is in around the middle of the sequence strip. - Drag the "Strip Offset Start" to 500 *(notice the strip shows as flipped)*. - Delete the strip. - Blender Crashes Attached asan crash output: [asan_error.txt](https://archive.blender.org/developer/F8398436/asan_error.txt)
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Most of the values in the Time panel needs to be clamped: https://developer.blender.org/T65723

The slide operator seems like an isolated operator build outside the handle selection system. It should be recoded to work inside the transforming system in this industry standart way, where two selected handles inside the strip will slip it:
image.png

As opposed to selection the two handles outside of the strip to slide it, which actually works now(except when there are no adjacent handles):
slide.gif

Most of the values in the Time panel needs to be clamped: https://developer.blender.org/T65723 The slide operator seems like an isolated operator build outside the handle selection system. It should be recoded to work inside the transforming system in this industry standart way, where two selected handles inside the strip will **slip** it: ![image.png](https://archive.blender.org/developer/F8398516/image.png) As opposed to selection the two handles outside of the strip to **slide** it, which actually works now(except when there are no adjacent handles): ![slide.gif](https://archive.blender.org/developer/F8398521/slide.gif)

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This doesn't look like problem with offsets but rather improper cleanup of cache.

Can not really reproduce, but I can see where the problem may be.

This doesn't look like problem with offsets but rather improper cleanup of cache. Can not really reproduce, but I can see where the problem may be.
Author
Owner

Odd, this reliably crashes every time, although it may be Asan forcing the crash when a regular build may not crash.

Odd, this reliably crashes every time, although it may be Asan forcing the crash when a regular build may not crash.
Richard Antalik self-assigned this 2020-04-13 01:35:16 +02:00

This issue was referenced by c13ad410a6

This issue was referenced by c13ad410a66eb2ab7f2976fca8322f726eef6203

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74603
No description provided.