Fix T74603: Tweaking offsets causes strips to "reverse"

Add range function to RNA properties.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D7285